--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Weather App</title>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
     
-    <link rel="stylesheet" href="//codepen.io/assets/reset/normalize.css">
+    //<link rel="stylesheet" href="//codepen.io/assets/reset/normalize.css">
     <link rel='stylesheet prefetch' href='https://rawgit.com/erikflowers/weather-icons/master/css/weather-icons.css'>
     <style>
       body {
