--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ $('.js-geolocation').on('click', function() {
       2: "position unavailable",
       3: "timed out",
     };
-    $("#weather").html("Error occurred: " + decode[error.code]);
+    $("#weather").html("<p>Error occurred: " + decode[error.code]+"/<p>");
   }
   var geoOptions = {
     timeout: 10 * 1000
